src/test/ui/issue-32950.stderr
error: `derive` cannot be used on items with type macros
  --> $DIR/issue-32950.rs:15:5
   |
LL |     concat_idents!(Foo, Bar) //~ ERROR `derive` cannot be used on items with type macros
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

